force-app/main/default/objects/WorkflowBatch__c/WorkflowBatch__c.object-meta.xml
<CustomObject>
    <label>Workflow Batch</label>
    <nameField>
        <displayFormat>Batch{0000}</displayFormat>
        <label>Workflow Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>