force-app/main/default/objects/WorkflowBatch__c/fields/Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Accreditation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accreditation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>