force-app/main/default/objects/WorkflowBatch__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>ImplementationData__c.TotalSavings__c</summarizedField>
    <summaryForeignKey>ImplementationData__c.WorkflowBatch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>