force-app/main/default/objects/WorkflowBatch__c/fields/CertificateType__c.field-meta.xml
<CustomField>
    <fullName>CertificateType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certificate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>