force-app/main/default/objects/WorkflowBatch__c/fields/NumberOfCerts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCerts__c</fullName>
    <label>Number of Certs</label>
    <summaryForeignKey>ImplementationData__c.WorkflowBatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>