force-app/main/default/objects/WorkflowBatch__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>