force-app/main/default/objects/WorkflowBatch__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>