force-app/main/default/objects/WorkflowBatch__c/fields/TotalNumberCerts__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberCerts__c</fullName>
    <formula>NumberOfCerts__c  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Certs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>