force-app/main/default/objects/WorkflowBatch__c/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vintage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>