force-app/main/default/objects/WorkflowBatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>CertificateType__c</columns>
    <columns>Amount__c</columns>
    <columns>TotalNumberCerts__c</columns>
    <columns>Range__c</columns>
    <columns>Vintage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>